Modifications du rapport.

--- a/ProjetTAL_VS/ProjetTAL_VS/Rapport/latex_template.tex
+++ b/ProjetTAL_VS/ProjetTAL_VS/Rapport/latex_template.tex
@@ -152,12 +152,12 @@ Pour afficher les caractères spéciaux:
 
 Insérez une image comme suit:
 
-\includegraphics[width=100pt]{myimage.jpg} % width=\linewidth to get image to fill whole width
+%\includegraphics[width=100pt]{myimage.jpg} % width=\linewidth to get image to fill whole width
 
 Tout petit et centré $\rightarrow$
 
 \begin{center}
-\includegraphics[width=20pt]{myimage.jpg} % width=\linewidth to get image to fill whole width
+%	\includegraphics[width=20pt]{myimage.jpg} % width=\linewidth to get image to fill whole width
 \end{center}
 
 \section{Maths}
@@ -176,8 +176,9 @@ Pour faire des équations alignées:
 Quelques templates: \url{https://www.latextemplates.com} \\
 Documentation: \url{https://www.latex-project.org}
 
-\input{difficulties.tex}
 \input{intro.tex}
+\input{difficulties.tex}
+
 \input{strat.tex}
 \input{theme.tex}
 \input{whatCouldHaveBeenDone.tex}
