--- a/ProjetTAL_VS/ProjetTAL_VS/Rapport/intro.tex
+++ b/ProjetTAL_VS/ProjetTAL_VS/Rapport/intro.tex
@@ -1,208 +1,11 @@
-\documentclass[paper=a4, fontsize=11pt]{article}
+	Introduction
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Find below lists of packages to include, commands and macros
-% that may be useful later on in your document
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\usepackage[margin=0.9in]{geometry} % margin size
-
-% choose language and encoding options
-\usepackage[frenchb]{babel}
-% \usepackage[english]{babel}  % decomment to use English
-\usepackage[utf8]{inputenc}
-
-% some useful options for tables and arrays
-\usepackage{booktabs}
-\usepackage{array}
-\newcolumntype{L}[1]{>{\raggedright\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
-\newcolumntype{C}[1]{>{\centering\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
-\newcolumntype{R}[1]{>{\raggedleft\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
-
-% custom colors - you can define your own colours
-\usepackage{color}
-\definecolor{deepblue}{rgb}{0,0,0.5}
-\definecolor{deepred}{rgb}{0.6,0,0}
-\definecolor{deepgreen}{rgb}{0,0.5,0}
-
-% page formating with the "fancy header" package
-\usepackage{fancyhdr} % Custom headers and footers
-\pagestyle{fancyplain} % Makes all pages in the document conform to the custom headers and footers
-\fancyhead{} % header
-\fancyfoot[L]{} % left footer
-\fancyfoot[C]{\thepage} % centre footer
-\fancyfoot[R]{}  % right footer
-\renewcommand{\headrulewidth}{1pt} 
-\renewcommand{\footrulewidth}{1pt} 
-\setlength{\headheight}{13.6pt} % Customize the height of the header
-
-\usepackage{amsmath,amsfonts,amsthm} % maths packages
-\usepackage{graphicx} % graphics package
-\usepackage{url} % hyperlinks
+  Le sujet qui a été choisi est celui du chatbot (ou assistant personnel). 
+Explications sur le chat bot
 
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
- % Le contenu de votre document commence ici
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+L'ensemble des membres du groupe était relativement motivé par ce sujet, du chatbot. Le thème restait toutefois à choisir : pour ne pas avoir un simple robot générique
 
-\begin{document}
-
-\title{Voici votre titre}
-\author{Les auteurs - c'est vous}
-\date{La date}
-\maketitle
-
-\section{Ceci est une section}
-Vous pouvez créer des sections, des sous-sections, des sous-sous-sections et des paragraphes. Après
-la compilation, tout sera numéroté comme il faut! Vous pouvez faire du \textbf{texte en gras} ou du
-\textit{texte en italiques} ou \texttt{en typewriter}. \\
-
-On peut aussi {\small changer} {\large la taille} {\tiny du texte}.  Les tailles prédéfinies sont:
-{\tiny tiny}, {\scriptsize scriptsize}, {\footnotesize footnotesize}, {\small small}, {\normalsize
-  normalsize}, {\large large} et {\Large Large}.
-
-On peut changer la couleur du texte \textcolor{red}{comme ça}.
-
-\subsection{Ceci est une sous-section}
-Voici pouvez faire des listes avec des puces:
-
-\begin{itemize}
-\item Liste
-\item Non
-\item Numérotée
-\end{itemize}
-
-\vspace{0.5cm} % Add some vertical space (hspace also exists for horizontal space)
-
-Ou des listes numérotées:
-\begin{enumerate}
-\item Liste
-\item Numérotée
-\end{enumerate}
-
-\vspace{0.5cm}
-Et même des listes imbriquées:
-
-\begin{enumerate}
-\item Chien
-  \begin{itemize}
-    \item Caniche
-      \begin{itemize}
-        \item[$\diamond$] Fluffy
-        \item[$\rightarrow$] Candyfloss
-        \end{itemize}
-    \item Yorkshire
-    \end{itemize}
-\item Chat
-\item Oiseau
-  \begin{itemize}
-    \item Moineau
-    \item Aigle
-    \end{itemize}
-\end{enumerate}
-
-\subsubsection{Ceci est une sous-sous-section}
-
-Voici un tableau:\\ % two backslashes makes a new line
-
-\begin{tabular}{lcr} % number of characters = number of columns (l = left, r=right, c = centre)
-\toprule
-Left & Centre & Right \\
-\midrule
-Voici du texte & Beaucoup de texte & Et Encore du texte \\
-a & b & c \\
-\bottomrule
-\end{tabular}
-
-\vspace{0.5cm} % Add some vertical space 
-
-Le même tableau mais centré!
-
-\begin{center}
-\begin{tabular}{lcr} % number of characters = number of columns (l = left, r=right, c = centre)
-\toprule
-Left & Centre & Right \\
-\midrule
-Voici du texte & Beaucoup de texte & Et Encore du texte \\
-a & b & c \\
-\bottomrule
-\end{tabular}
-\end{center}
-
-\paragraph{Ceci est un paragraphe}
-Pour faire des guillemets, regardez bien les caractères écrits dans la source \LaTeX: 
-\begin{itemize}
-\item \og Des guillemets à la française\fg{}.
-\item ``Des guillemets doubles à l'anglaise''
-\item `Des guillemets simples'
-\end{itemize}
-
-\vspace{0.5cm} 
-
-Pour afficher les caractères spéciaux:
-\begin{itemize}
-\item accolades \} et \{
-\item signe de pourcentage \%
-\item anti-slash \textbackslash
-\item tilde: \textasciitilde{} or $\sim$ 
-\end{itemize}
-
-\vspace{0.5cm} % Add some vertical space 
-
-%\newpage % page break
-
-Insérez une image comme suit:
-
-\includegraphics[width=100pt]{myimage.jpg} % width=\linewidth to get image to fill whole width
-
-Tout petit et centré $\rightarrow$
-
-\begin{center}
-\includegraphics[width=20pt]{myimage.jpg} % width=\linewidth to get image to fill whole width
-\end{center}
-
-\section{Maths}
-
-Pour faire une équation simple, utilisez l'environnement maths. Vous pouvez faire des maths inline
-comme suit: $a = \sum_{i=0}^{N} x_i + c$ ou comme suit:
-
-\[ a = \sum_{i=0}^{N} x_i + c + \dfrac{1}{2} + \text{some more stuff\dots}\]
-
-
-Pour faire des équations alignées:
-
-
-\section{Et plein d'autres choses!}
-
-Quelques templates: \url{https://www.latextemplates.com} \\
-Documentation: \url{https://www.latex-project.org}
-
-Introduction
-
-	Explications sur le chat bot
-
-
-Stratégie
-
-	Corpus: ensemble de question-réponse
-	base de donnée : mots des questions du corpus étiquetés et pondérés (2 mot interrogatif, 1,2  verbe, 0,7 nom et pronom, adverve, adjectif 0,25, cf code), puis un dictionnaire avec pour clé un mot interrogatif et pour valeur une liste de couple question-réponse
-	analyse de la question de l'utilisateur: on étiquette et pondère la question et on cherche dans le dictionnaire la réponse qui a le plus gand coefficient
-	fin : on affiche la réponse
-	+ capture d'écran
-
-
-Thème
-
-	Explication, on veut faire un chatbot avec pour thème D&D, pour cela on change le vocabulaire
-
-
-Difficultés
-
-	le corpus : trouvé un corpus qui permette de mieux répondre
-
-
-Ce qu'on aurait pu faire et comment
-
-	si vous avez des idées de quoi et comment le faire : garder un lien entre les questions d'une conversation
-
-
-\end{document}
+%Un chatbot/assistant personnel est un agent programm´e pour entretenir un dialogue avec un utilisateur. ` A l’origine, les chatbots ´etaient destin´es `a une tˆache sp´eciﬁque (p. ex. r´eservation de billets de train, assistance pour les achats dans un magasin, psychologue, etc.), mais de nos jours, il existe aussi des agents destin´es `a la conversation en g´en´eral, une tˆache bien plus diﬃcile.
+%Enjeux — Le but d’un chatbot est de cr´eer une situation de dialogue entre un utilisateur et l’agent. Son langage doit donc essayer de reﬂ´eter le mieux possible les ´enonc´es attendus par un humain. — Veillez `a ce que les ´enonc´es que vous produisez soient grammaticalement bien form´es. Ceci peut ˆetre parfois diﬃcile, mais fera une grande diﬀ´erence pour la qualit´e de votre chatbot! — Des r´eponses plus pr´ecises (qui prennent en compte les ´enonc´es de l’utilisateur par exemple) augmenteront la cr´edibilit´e de votre chatbot. Un syst`eme simple qui r´ep`ere quelques mots cl´es peut ˆetre assez eﬃcace.
+%` A faire — Vous choisirez un domaine de comp´etence pour votre chatbot. Quel est est son but? Vous pouvez par exemple cr´eer un chatbot pour interroger un site de r´eservation de billets de train, pour donner des directions, ou pour entretenir une conversation. Si vous choisissez de d´evelopper un agent conversationnel g´en´eral, vous devrez probablement mettre en avant un ou deux aspects de la conversation que votre chatbot maˆıtrise particuli`erement bien. — Vous pouvez utiliser la m´ethode que vous souhaitez pour construire votre chatbot : heuristiques, motifs, mots cl´es, grammaires (CFGs avec NLTK), r´eponses g´en´eriques, etc. — les´enonc´esproduitsparvotrechatbotdevrontˆetregrammaticalementbienform´es.Faitesattention `a l’accord, aux temps des verbes, etc. — Un dialogue est form´e d’un locuteur (celui qui parle `a un instant donn´e) mais aussi d’un interlocuteur (celui qui ´ecoute). Pour cr´eer un dialogue plus r´ealiste, pensez `a inclure des ´enonc´es qui montrent que l’agent prend en compte ce que dit l’utilisateur. Les  backchannels  sont des signaux verbaux ou non verbaux qui sont les r´eponses de l’interlocuteur (hochements de tˆetes pour les agents qui ont en ont une, des marqueurs de compr´ehension tels que  uh huh ,  oui , des reprises de l’´enonc´e pr´ec´edent en cas de manque de compr´ehension etc.) — Mettez en avant ce que votre agent arrive `a faire, mais incluez dans votre rapport une section qui discute des limitations de votre chatbot : y a-t-il des choses qu’il ne peut pas g´erer? Quelle sorte de solutions proposeriez-vous pour l’avenir?
