--- a/ProjetTAL_VS/ProjetTAL_VS/Rapport/intro.tex
+++ b/ProjetTAL_VS/ProjetTAL_VS/Rapport/intro.tex
@@ -1,11 +1,5 @@
-	Introduction
+	\section{Introduction}
 
-  Le sujet qui a été choisi est celui du chatbot (ou assistant personnel). 
-Explications sur le chat bot
+Le sujet qui a été choisi est celui du ChatBot (ou assistant personnel). Le rôle du ChatBot est d'avoir une "conversation" avec un ou plusieurs humains. Il existe de nombreux ChatBot, par exemple sur certains sites web, il existe des ChatBots permettant d'aider les utilisateurs. On en retrouve aussi beaucoup dans le domaine de l'intelligence artificielle, comme avec Siri de Apple. L’ensemble des membres du groupe était relativement motivé par ce sujet, du ChatBot. 
 
-
-L'ensemble des membres du groupe était relativement motivé par ce sujet, du chatbot. Le thème restait toutefois à choisir : pour ne pas avoir un simple robot générique
-
-%Un chatbot/assistant personnel est un agent programm´e pour entretenir un dialogue avec un utilisateur. ` A l’origine, les chatbots ´etaient destin´es `a une tˆache sp´eciﬁque (p. ex. r´eservation de billets de train, assistance pour les achats dans un magasin, psychologue, etc.), mais de nos jours, il existe aussi des agents destin´es `a la conversation en g´en´eral, une tˆache bien plus diﬃcile.
-%Enjeux — Le but d’un chatbot est de cr´eer une situation de dialogue entre un utilisateur et l’agent. Son langage doit donc essayer de reﬂ´eter le mieux possible les ´enonc´es attendus par un humain. — Veillez `a ce que les ´enonc´es que vous produisez soient grammaticalement bien form´es. Ceci peut ˆetre parfois diﬃcile, mais fera une grande diﬀ´erence pour la qualit´e de votre chatbot! — Des r´eponses plus pr´ecises (qui prennent en compte les ´enonc´es de l’utilisateur par exemple) augmenteront la cr´edibilit´e de votre chatbot. Un syst`eme simple qui r´ep`ere quelques mots cl´es peut ˆetre assez eﬃcace.
-%` A faire — Vous choisirez un domaine de comp´etence pour votre chatbot. Quel est est son but? Vous pouvez par exemple cr´eer un chatbot pour interroger un site de r´eservation de billets de train, pour donner des directions, ou pour entretenir une conversation. Si vous choisissez de d´evelopper un agent conversationnel g´en´eral, vous devrez probablement mettre en avant un ou deux aspects de la conversation que votre chatbot maˆıtrise particuli`erement bien. — Vous pouvez utiliser la m´ethode que vous souhaitez pour construire votre chatbot : heuristiques, motifs, mots cl´es, grammaires (CFGs avec NLTK), r´eponses g´en´eriques, etc. — les´enonc´esproduitsparvotrechatbotdevrontˆetregrammaticalementbienform´es.Faitesattention `a l’accord, aux temps des verbes, etc. — Un dialogue est form´e d’un locuteur (celui qui parle `a un instant donn´e) mais aussi d’un interlocuteur (celui qui ´ecoute). Pour cr´eer un dialogue plus r´ealiste, pensez `a inclure des ´enonc´es qui montrent que l’agent prend en compte ce que dit l’utilisateur. Les  backchannels  sont des signaux verbaux ou non verbaux qui sont les r´eponses de l’interlocuteur (hochements de tˆetes pour les agents qui ont en ont une, des marqueurs de compr´ehension tels que  uh huh ,  oui , des reprises de l’´enonc´e pr´ec´edent en cas de manque de compr´ehension etc.) — Mettez en avant ce que votre agent arrive `a faire, mais incluez dans votre rapport une section qui discute des limitations de votre chatbot : y a-t-il des choses qu’il ne peut pas g´erer? Quelle sorte de solutions proposeriez-vous pour l’avenir?
+Le thème restait toutefois à choisir : nous ne voulions pas un ChatBot trop générique, et nous sommes conscients de nos propres limites. Ainsi, nous avons voulu faire un ChatBot autour du jeu "Donjons et Dragons". Son rôle sera de se comporter comme un personnage de l'univers du jeu, qui pourra répondre à quelques questions basiques portant sur l'univers.
