--- a/ProjetTAL_VS/ProjetTAL_VS/Rapport/difficulties.tex
+++ b/ProjetTAL_VS/ProjetTAL_VS/Rapport/difficulties.tex
@@ -1,4 +1,3 @@
 \section{Difficultés}
-
-
-	le corpus : trouvé un corpus qui permette de mieux répondre
+La grande difficulté de ce projet résidait dans le corpus. En effet il fallait un corpus sous une forme particulière : des couples de questions réponses. Cette forme a réduit le nombre de corpus utilisable et nous a donc compliqué la tâche. Nous avons donc choisi des scripts de films puisque les dialogues se rapprochaient de ce qu'on voulait.
+De plus il fallait un corpus qui rende notre ChatBot le plus "humain" possible et surtout qui nous fournisse des réponses cohérente.
