--- a/ProjetTAL_VS/ProjetTAL_VS/Rapport/whatCouldHaveBeenDone.tex
+++ b/ProjetTAL_VS/ProjetTAL_VS/Rapport/whatCouldHaveBeenDone.tex
@@ -24,4 +24,4 @@ Une ultime amélioration apparente est celle de la correction orthographique des
 
 De même, une solution valide serait de suggérer à l'utilisateur des corrections potentielles (via une interface graphique), qu'il sélectionnerait (l'illustration est ici le correcteur grammatical de Microsoft Office Word ou LibreOffice Writer).
 
-Comment seraient suggérées ces corrections ? À l'aide d'un calcul de distance de Levenshtein, qui permet de calculer la similitude entre deux mots, en détectant les permutations, ajouts et suppressions de lettres pour arriver d'un mot à un autre. L'algorithme est relativement simple, mais s'il est appliqué à tout un dictionnaire, il risquerait d'être particulièrement. Limiter la corrections à trois ou quatre mots très proche semble raisonnable.
+Comment seraient suggérées ces corrections ? À l'aide d'un calcul de distance de Levenshtein, qui permet de calculer la similitude entre deux mots, en détectant les permutations, ajouts et suppressions de lettres pour arriver d'un mot à un autre. L'algorithme est relativement simple, mais s'il est appliqué à tout un dictionnaire, il risquerait d'être particulièrement gourmand en ressources. Limiter la corrections à trois ou quatre mots très proche semble raisonnable.
