--- a/ProjetTAL_VS/ProjetTAL_VS/Rapport/rapportTal.tex
+++ b/ProjetTAL_VS/ProjetTAL_VS/Rapport/rapportTal.tex
@@ -1,14 +1,13 @@
-\section{Répartition des tâches}
-	Au tout début du projet, nous avons réfléchis à trois pour voir comment le Chatbot sera modélisé et comment il fonctionnera. Nous pouvons dire que le rapport est le fruit de nos trois réflexions.
+	Au tout début du projet, nous avons réfléchis à trois pour voir comment le ChatBot serait modélisé et comment il fonctionnerait. Nous pouvons dire que le rapport est le fruit de nos trois réflexions.
 
-	Ensuite nous avons eu globalement 3 tâches:
+	Ensuite nous avons eu globalement trois tâches:
 	\begin{itemize}
-		\item Récupérer les corpus
-		\item Convertir les corpus
-		\item Coder le Chatbot en partant des corpus convertis
+		\item Récupérer les corpus ;
+		\item Convertir les corpus ;
+		\item Coder le ChatBot en partant des corpus convertis ;
 	\end{itemize}
 
-	Ainsi, Mathieu LOUVET à récupérer les corpus via un script python, Mickael SERENO les a converti et Stacy GROMAT a coder le fichier projet.py pour avoir un Chatbot.
-	Quand le Chatbot a été codé, il fallait attendre que tous les corpus soient correctement traités. Cela demandait du temps car nous ne connaissions pas encore NLTK.
+	Ainsi, Mathieu a récupéré les corpus via un script python, Mickael les a converti et Stacy à codé le fichier projet.py pour avoir un ChatBot.
+	Quand le ChatBot a été codé, il fallait attendre que tous les corpus soient correctement traités. Cela demandait du temps car nous ne connaissions pas encore NLTK.
 
-	Une fois les corpus convertis, nous avons pu tester le programme et nous l'avons débuggué à trois, l'avons "amélioré" petit à petit à trois (quelques petits bugs subsistaient). Il est difficile à ce stade de dire qui a fait quoi.
+	Une fois les corpus convertis, nous avons pu tester le programme et nous l'avons débogué à trois, l'avons "amélioré" petit à petit (quelques petits bugs subsistaient). Il est difficile à ce stade de dire qui a fait quoi.
