--- a/ProjetTAL_VS/ProjetTAL_VS/Rapport/rapportTal.tex
+++ b/ProjetTAL_VS/ProjetTAL_VS/Rapport/rapportTal.tex
@@ -8,7 +8,7 @@
 		\item Coder le ChatBot en partant des corpus convertis ;
 	\end{itemize}
 
-	Ainsi, Mathieu a récupéré les corpus via un script python, Mickael les a converti et Stacy à codé le fichier projet.py pour avoir un ChatBot.
+	Ainsi, Mathieu a récupéré les corpus via un script python, Mickael les a converti et Stacy a codé le fichier projet.py pour avoir un ChatBot.
 	Quand le ChatBot a été codé, il fallait attendre que tous les corpus soient correctement traités. Cela demandait du temps car nous ne connaissions pas encore NLTK.
 
 	Une fois les corpus convertis, nous avons pu tester le programme et nous l'avons débogué à trois, l'avons "amélioré" petit à petit (quelques petits bugs subsistaient). Il est difficile à ce stade de dire qui a fait quoi.
