--- a/ProjetTAL_VS/ProjetTAL_VS/Rapport/intro.tex
+++ b/ProjetTAL_VS/ProjetTAL_VS/Rapport/intro.tex
@@ -1,5 +1,5 @@
 	\section{Introduction}
 
-Le sujet qui a été choisi est celui du ChatBot (ou assistant personnel). Le rôle du ChatBot est d'avoir une "conversation" avec un ou plusieurs humains. Il existe de nombreux ChatBot, par exemple sur certains sites web, il existe des ChatBots permettant d'aider les utilisateurs. On en retrouve aussi beaucoup dans le domaine de l'intelligence artificielle, comme avec Siri de Apple. L’ensemble des membres du groupe était relativement motivé par ce sujet, du ChatBot. 
+Le sujet qui a été choisi est celui du ChatBot (ou assistant personnel). Le rôle du ChatBot est d'avoir une "conversation" avec un ou plusieurs humains. Il existe de nombreux ChatBot, par exemple sur certains sites web, il existe des ChatBots permettant d'aider les utilisateurs. On en retrouve aussi beaucoup dans le domaine de l'intelligence artificielle, comme avec Siri de Apple. L’ensemble des membres du groupe était relativement motivé par ce sujet, celui du ChatBot. 
 
 Le thème restait toutefois à choisir : nous ne voulions pas un ChatBot trop générique, et nous sommes conscients de nos propres limites. Ainsi, nous avons voulu faire un ChatBot autour du jeu "Donjons et Dragons". Son rôle sera de se comporter comme un personnage de l'univers du jeu, qui pourra répondre à quelques questions basiques portant sur l'univers.
