--- a/ProjetTAL_VS/ProjetTAL_VS/Rapport/rapportTal.tex
+++ b/ProjetTAL_VS/ProjetTAL_VS/Rapport/rapportTal.tex
@@ -1,5 +1,5 @@
 \section{Répartition des tâches}
-	Au tout début du projet, nous avons réfléchis à trois pour voir comment le Chatbot sera modélisé et comment il fonctionnera. Nous pouvons dire que le rapport est le fruit de nos trois réflexions.
+	Au tout début du projet, nous avons réfléchis à trois pour voir comment le Chatbot serait modélisé et comment il fonctionnerait. Nous pouvons dire que le rapport est le fruit de nos trois réflexions.
 
 	Ensuite nous avons eu globalement 3 tâches:
 	\begin{itemize}
@@ -8,7 +8,7 @@
 		\item Coder le Chatbot en partant des corpus convertis
 	\end{itemize}
 
-	Ainsi, Mathieu LOUVET à récupérer les corpus via un script python, Mickael SERENO les a converti et Stacy GROMAT a coder le fichier projet.py pour avoir un Chatbot.
+	Ainsi, Mathieu LOUVET a récupéré les corpus via un script python, Mickael SERENO les a convertis et Stacy GROMAT a codé le fichier projet.py pour avoir un Chatbot.
 	Quand le Chatbot a été codé, il fallait attendre que tous les corpus soient correctement traités. Cela demandait du temps car nous ne connaissions pas encore NLTK.
 
 	Une fois les corpus convertis, nous avons pu tester le programme et nous l'avons débuggué à trois, l'avons "amélioré" petit à petit à trois (quelques petits bugs subsistaient). Il est difficile à ce stade de dire qui a fait quoi.
